# FastAPI-PostgreSQL-grind

./: README.md
Blog API/: README.md
Blog API/app/db/models/: associations.py  category.py  comment.py  post.py  tag.py  user.py
Todo API/: .env  README.md  alembic.ini  pyproject.toml
Todo API/alembic/: env.py
Todo API/alembic/versions/: 0d2dc0557618_initial_schema_with_users_and_todos.py  82f9e073b3c1_create_todos_table.py  b618101b6860_create_todos_table.py  c3c57e1b9b13_create_todos_table.py
Todo API/app/: database.py  main.py
Todo API/app/api/v1/routers/: auth.py  todo.py
Todo API/app/core/: config.py  security.py
Todo API/app/crud/: crud.py  user.py
Todo API/app/models/: todo.py  user.py
Todo API/app/schemas/: todo.py  token.py  user.py
Todo API/app/utils/: auth.py  dependencies.py
